# autorun

./: .gitignore  MANIFEST.in  README.md  haby.py  live_test_suite.py  pyproject.toml  setup.py  test_suite.py  todo.md
autorun/: __init__.py
examples/macros/: bisect.md  migrate.md  release.md
haberdash/: __init__.py  cli.py  macros.py
runthis/: cli.py
